--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
+    <header class="header ">
+        <div class="header__container">
+            <h1 >
+                <img class="header__logo " src="./dist/images/disneyplus.svg" alt="Disney+">
+            </h1>
+            <ul class="header__links">
+                <li class="header__links__item ">
+                    <a href="#" class="button button--secondary">Assine agora</a>
+                </li>
+                <li class="header__links__item">
+                    <a href="#" class="button button--dark">Entrar</a>
+                </li>
+            </ul>
+        </div>
+    </header>
     <section class="hero">
         <div class="hero__content">
-            <h1 class="hero__content__branding">
+            <div class="hero__content__branding">
                 <img src="./dist/images/disneyplus.svg" alt="Disney+">
-            </h1>
+            </div>
             <h3 class="title--small">
                 As melhores histórias em um só lugar.
             </h3>
@@ -204,6 +219,104 @@
             </li>
         </ul>
     </section>
+    <section class="faq">
+        <h2 class="title">Perguntas Frequentes</h2>
+        <ul class="faq__questions">
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-questions>
+                    O que está incluído no Disney+?
+                </div>
+                <div class=" text--big faq__questions__item__answer">
+                    <p>O Disney+ oferece:</p>
+                    <ul>
+                        <li>Experiência de entretenimento exclusiva.</li>
+                        <li>As melhores histórias da Disney, Pixar, Marvel, Star Wars e National Geographic, tudo em um só lugar.</li>
+                        <li>Groupwatch: assista junto com amigos ou familiares, mesmo separados.</li>
+                        <li>Downloads ilimitados em até 10 dispositivos compatíveis.</li>
+                        <li>Mais de 300 títulos em 4K UHD e HDR.</li>
+                        <li>A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional.</li>
+                        <li>IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+.</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="faq__questions__item ">
+                <div class="faq__questions__item__question" data-faq-questions>
+                    Já tem o Disney+ ou Star+ e quer o Combo+?
+                </div>
+                <div class=" text--big faq__questions__item__answer">
+                    <p>Ao assinar o Combo+:</p>
+                    <ul>
+                        <li>O valor da sua assinatura existente (anual ou mensal) será descontado do preço do Combo+.</li>
+                        <li>Se você assina o plano mensal, o valor que você paga mensalmente será descontado do preço do Combo+.</li>
+                        <li>Se você assina o plano anual, dividiremos o valor que você já pagou em 12 vezes e descontaremos esse valor do preço do Combo+ mensalmente.</li>
+                        <li>Você vai receber um e-mail com os valores detalhados assim que finalizar o pagamento.</li>
+                        <li>Lembre-se: você pode cancelar a assinatura quando quiser.</li>
+                    </ul>
+                    <p>No momento, apenas a assinatura mensal do Combo+ está disponível.</p>
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-questions>
+                    Quais formas de pagamento posso utilizar
+                </div>
+                <div class=" text--big faq__questions__item__answer">
+                    Você pode utilizar: cartão de débito, cartão de crédito, PayPal, Mercado Pago, e também empresas parceiras como Google Play Store, App Store da Apple; Mercado Livre e provedores locais de TV, telefonia e internet.
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-questions>
+                    Como posso ver conteúdo com classificação indicativa até 16 e 18?
+                </div>
+                <div class=" text--big faq__questions__item__answer">
+                    Para poder acessar o catálogo completo que inclui conteúdo com classificação indicativa até 16 e 18, todos os usuários do Disney+ na América Latina devem atualizar as configurações de controle parental do perfil. É possível restringir o conteúdo de cada perfil e também adicionar um PIN de bloqueio. Os usuários que preferirem manter a configuração atual vão continuar aproveitando o Disney+ com a classificação indicativa até 14, podendo alterá-la a qualquer momento em "Editar Perfis".
+                </div>
+            </li>
+        </ul>
+    </section>
+
+    <footer class="footer">
+        <div class="footer__container">
+            <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
+            <ul class="footer__links">
+                <li class="footer__links__item">
+                    <div class="language-selector">
+                        <img src="./dist/images/icones/globe.svg" alt="globo do mundo">
+                        <select>
+                            <option>English</option>
+                            <option selected>Português</option>
+                        </select>
+                    </div>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://disneytermsofuse.com/brazilian-portuguese/" target="_blank">Termos e condições de uso</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://www.disneyplus.com/pt-br/legal/pol%C3%ADtica-de-privacidade" target="_blank">Política de privacidade</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://www.disneyplus.com/pt-br/legal/prote%C3%A7%C3%A3o-de-dados-no-brasil" target="_blank">Proteção de dados no Brasil</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://preferences-mgr.trustarc.com/?pid=disney01&aid=disneyplus01&type=disneyplus" target="_blank">Anúncios personalizados</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://help.disneyplus.com/csp?id=csp_article_content&article=devices-supported" target="_blank">Dispositivos compatíveis</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://help.disneyplus.com/csp" target="_blank">Ajuda</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://help.disneyplus.com/csp?id=csp_article_content&sys_kb_id=1123a3bcdb1815d40729eb2ed39619e3" target="_blank">Sobre o Disney+</a>
+                </li>
+            </ul>
+            <p class="text--small">
+                ® 2023 Disney, Disney+ e The Walt Disney Company. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+            </p>
+            <p class="text--small">
+                Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20
+            </p>
+        </div>
+    </footer>
     
 
     <script src="./src/main.js"></script>
